--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ const modalData = {
   },
   work: {
     title: '服務內容',
-    img: 'assets/images/services.jpg',
+    img: 'assets/images/modalData.work.img.jpg',
     content: '服務內容介紹...'
   },
   about: {
