--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ nav ul li {
 /* 彈窗圖片：寬度 80%，高度自動 */
 .modal-image img {
   width: 80%;                 /* 🔥 你的要求：圖片占彈窗 80% */
-  height: auto;               /* 高度自動、保持比例 */
+  height: 50%;               /* 高度自動、保持比例 */
   border-radius: 10px;
   margin-bottom: 20px;
 }
