--- a/index.html
+++ b/index.html
@@ -5,267 +5,137 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>佳咊實業有限公司</title>
 
-<!-- HTML5UP Dimension 原始 CSS -->
+<!-- Dimension 官方 CSS -->
 <link rel="stylesheet" href="https://html5up.net/uploads/demos/dimension/assets/css/main.css" />
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
 <style>
-/* --- 全站背景 --- */
+/* 全站背景覆蓋 */
 body {
   background: url("https://raw.githubusercontent.com/Willa-oceanwei/chiahe/main/assets/images/neom-SUIMrEKVOXc-unsplash.jpg") no-repeat center center fixed;
   background-size: cover;
-  font-family: 'Arial', sans-serif;
-  margin: 0;
 }
 
-/* --- Header --- */
-header {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 60px 0 40px;
-  border-top: 2px solid #fff;
-  border-bottom: 2px solid #fff;
-  text-align: center;
-  position: relative;
-  z-index: 1;
-}
-
-/* --- Logo 圓形鑽石 --- */
-header .logo {
-  width: 80px;
-  height: 80px;
-  border: 2px solid #fff;
-  border-radius: 50%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-bottom: 20px;
-}
-
-header .logo span {
-  font-size: 1.8rem;
-  color: #fff;
-}
-
-/* --- Header 文字 --- */
-header .content .inner h1 {
-  font-size: 48px;
-  color: #fff;
-  margin: 0;
-  font-weight: bold;
-}
-header .content .inner p {
-  font-size: 26px;
-  color: #fff;
-  margin-top: 10px;
-}
-
-/* --- 導覽列置中 --- */
-nav {
-  width: 50%; /* 兩側各留 25% */
-  margin: 20px auto 0;
-}
-
-nav ul {
-  display: flex;
-  justify-content: space-between;
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-nav ul li {
-  flex: 1;                /* 四個欄位平均寬度 */
-  text-align: center;     /* 文字置中 */
-}
-
+/* 導覽列文字白色 */
 nav ul li a {
-  color: #fff !important;
-  text-decoration: none;
-  font-weight: bold;
-  padding: 8px 0;
-  display: block;
-  transition: 0.3s;
+    color: #ffffff !important;
 }
 
-nav ul li a:hover {
-  text-shadow: 0 0 5px rgba(255,255,255,0.7);
-}
-
-/* --- 玻璃彈窗 --- */
+/* 玻璃彈窗 */
 .modal {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  width: 60%;
-  max-width: 800px;
-  transform: translate(-50%, -50%);
-  background: rgba(40,40,40,0.85);
-  backdrop-filter: blur(20px);
-  border-radius: 16px;
-  padding: 30px 40px;
-  text-align: center;
-  color: #fff;
-  z-index: 9999;
-  display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    width: 60%;
+    max-width: 600px;
+    transform: translate(-50%, -50%);
+    background: rgba(255,255,255,0.12);
+    backdrop-filter: blur(12px);
+    padding: 30px;
+    border-radius: 16px;
+    text-align: center;
+    z-index: 9999;
+    display: none;
+    overflow: hidden;
 }
 
 .modal-header {
-  font-size: 28px;
-  font-weight: bold;
-  margin-bottom: 20px;
+    font-size: 28px;
+    margin-bottom: 20px;
+    color: #fff;
 }
 
-/* 圖片占彈窗 80% */
 .modal-image img {
-  width: 80%;
-  height: 30%;
-  object-fit: contain;
-  border-radius: 10px;
-  margin-bottom: 20px;
+    width: 80%;     /* 圖片占彈窗 80% */
+    height: auto;
+    border-radius: 10px;
+    margin-bottom: 20px;
 }
 
 .modal-content {
-  font-size: 16px;
-  line-height: 1.6;
+    font-size: 16px;
+    color: #fff;
+    line-height: 1.6;
 }
 
-/* Close 按鈕 */
 .close-btn {
-  margin-top: 20px;
-  padding: 10px 25px;
-  font-size: 16px;
-  border-radius: 10px;
-  border: 2px solid rgba(255,255,255,0.5);
-  background: rgba(255,255,255,0.15);
-  color: #fff;
-  cursor: pointer;
+    margin-top: 20px;
+    padding: 10px 25px;
+    font-size: 16px;
+    border-radius: 10px;
+    border: 2px solid rgba(255,255,255,0.5);
+    background: rgba(255,255,255,0.15);
+    color: #fff;
+    cursor: pointer;
 }
 .close-btn:hover {
-  background: rgba(255,255,255,0.3);
-}
-
-/* --- Contact 表單樣式 --- */
-.modal-content form div {
-  margin-bottom: 15px;
-  text-align: left;
-}
-
-.modal-content input, .modal-content textarea {
-  width: 100%;
-  padding: 8px;
-  border: none;
-  border-radius: 4px;
-}
-
-.modal-content button {
-  padding: 10px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  background: #fff;
-  color: #000;
-}
-
-.modal-content .social-icons {
-  margin-top: 20px;
-}
-
-.modal-content .social-icons a {
-  margin: 0 10px;
-  color: #fff;
-  font-size: 1.4rem;
+    background: rgba(255,255,255,0.3);
 }
 </style>
 </head>
 
 <body>
 
-<header>
-  <div class="logo"><span class="fas fa-gem"></span></div>
-  <div class="content">
-    <div class="inner">
-      <h1>佳咊實業有限公司</h1>
-      <p>高品質色粉供應商</p>
+<!-- Header (保持 Dimension T 字結構) -->
+<header id="header">
+    <div class="logo"><span class="icon fa-gem"></span></div>
+    <div class="content">
+        <div class="inner">
+            <h1>佳咊實業有限公司</h1>
+            <p>高品質色粉供應商</p>
+        </div>
     </div>
-  </div>
-  <nav>
-    <ul>
-      <li><a href="#" onclick="openModal('intro')">關於佳咊</a></li>
-      <li><a href="#" onclick="openModal('work')">服務內容</a></li>
-      <li><a href="#" onclick="openModal('about')">產品介紹</a></li>
-      <li><a href="#" onclick="openModal('contact')">聯絡我們</a></li>
-    </ul>
-  </nav>
+    <!-- 導覽列 -->
+    <nav>
+        <ul>
+            <li><a href="#" onclick="openModal('intro')">Intro</a></li>
+            <li><a href="#" onclick="openModal('work')">Work</a></li>
+            <li><a href="#" onclick="openModal('about')">About</a></li>
+            <li><a href="#" onclick="openModal('contact')">Contact</a></li>
+        </ul>
+    </nav>
 </header>
 
-<!-- 玻璃彈窗 -->
+<!-- 彈窗 -->
 <div class="modal" id="modalBox">
-  <div class="modal-header" id="modalTitle">標題</div>
-  <div class="modal-image"><img id="modalImage" src=""></div>
-  <div class="modal-content" id="modalContent">內容文字</div>
-  <button class="close-btn" onclick="closeModal()">關閉</button>
+    <div class="modal-header" id="modalTitle">標題</div>
+    <div class="modal-image"><img id="modalImage" src=""></div>
+    <div class="modal-content" id="modalContent">內容文字</div>
+    <button class="close-btn" onclick="closeModal()">關閉</button>
 </div>
 
 <script>
 const modalData = {
-  intro: {
-    title: '關於佳咊',
-    img: 'https://raw.githubusercontent.com/Willa-oceanwei/chiahe/main/assets/images/about.jpg',
-    content: '佳咊實業成立於 1990 年，專注於色粉、顏料與色彩應用開發。我們致力於提供穩定品質、創新配方與客製化服務。'
-  },
-  work: {
-    title: '服務內容',
-    img: 'https://raw.githubusercontent.com/Willa-oceanwei/chiahe/main/assets/images/majid-abparvar-work.jpg',
-    content: '・塑膠色粉調色\n・Pantone 色號比對服務\n・客製化顏色研發\n・技術諮詢與色彩管理'
-  },
-  about: {
-    title: '產品介紹',
-    img: 'https://raw.githubusercontent.com/Willa-oceanwei/chiahe/main/assets/images/products.jpg',
-    content: '・PE 色母\n・PP 色母\n・透明色粉\n・金屬色粉\n・特殊效果顏料（珠光、螢光、金蔥）'
-  },
-  contact: {
-    title: '聯絡我們',
-    img: 'https://raw.githubusercontent.com/Willa-oceanwei/chiahe/main/assets/images/contact.jpg',
-    content: `
-      <form>
-        <div>
-          <label>姓名</label><br>
-          <input type="text" name="name" required>
-        </div>
-        <div>
-          <label>電子郵件</label><br>
-          <input type="email" name="email" required>
-        </div>
-        <div>
-          <label>訊息</label><br>
-          <textarea name="message" rows="4" required></textarea>
-        </div>
-        <div>
-          <button type="submit">送出</button>
-        </div>
-      </form>
-      <div class="social-icons">
-        <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-facebook-f"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-github"></i></a>
-      </div>
-    `
-  }
+    intro: {
+        title: '關於佳咊',
+        img: 'https://raw.githubusercontent.com/Willa-oceanwei/chiahe/main/assets/images/about.jpg',
+        content: '佳咊實業成立於 1990 年，專注於色粉、顏料與色彩應用開發。我們致力於提供穩定品質、創新配方與客製化服務。'
+    },
+    work: {
+        title: '服務內容',
+        img: 'https://raw.githubusercontent.com/Willa-oceanwei/chiahe/main/assets/images/majid-abparvar-work.jpg',
+        content: '・塑膠色粉調色<br>・Pantone 色號比對服務<br>・客製化顏色研發<br>・技術諮詢與色彩管理'
+    },
+    about: {
+        title: '產品介紹',
+        img: 'https://raw.githubusercontent.com/Willa-oceanwei/chiahe/main/assets/images/products.jpg',
+        content: '・PE 色母<br>・PP 色母<br>・透明色粉<br>・金屬色粉<br>・特殊效果顏料（珠光、螢光、金蔥）'
+    },
+    contact: {
+        title: '聯絡我們',
+        img: 'https://raw.githubusercontent.com/Willa-oceanwei/chiahe/main/assets/images/contact.jpg',
+        content: '佳咊實業有限公司<br>📍 台南市永康區中正南路309號<br>☎ 06-2536526<br>📧 service@chiahe.com.tw'
+    }
 };
 
-function openModal(key) {
-  document.getElementById('modalTitle').innerHTML = modalData[key].title;
-  document.getElementById('modalImage').src = modalData[key].img;
-  document.getElementById('modalContent').innerHTML = modalData[key].content;
-  document.getElementById('modalBox').style.display = 'block';
+function openModal(key){
+    document.getElementById('modalTitle').innerHTML = modalData[key].title;
+    document.getElementById('modalImage').src = modalData[key].img;
+    document.getElementById('modalContent').innerHTML = modalData[key].content;
+    document.getElementById('modalBox').style.display = 'block';
 }
 
-function closeModal() {
-  document.getElementById('modalBox').style.display = 'none';
+function closeModal(){
+    document.getElementById('modalBox').style.display = 'none';
 }
 </script>
 
